--- a/vanus.html
+++ b/vanus.html
@@ -1,43 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Your Page Title</title>
 </head>
 <body>
-    <input type="text" id="nimiInput" placeholder="nimi">
-    <input type="text" id="jumpInput" placeholder="tulemused">
-    <button onclick="addJump()">Add Person</button>
 
-    <ul id="listContainer"></ul>
+<input type="text" id="nimiInput" placeholder="Nimi">
+<input type="text" id="isikukoodInput" placeholder="Isikukood">
+<input type="text" id="vanusInput" placeholder="vanus">
+<input type="text" id="sünniaegInput" placeholder="sünniaeg">
+<button onclick="addPerson()">Add Person</button>
 
+<h1>Andmed</h1>
+<h3>Nimi | isikukood | vanus | sünnikuupäev</h3>
+<ul id="listContainer"></ul>
 
+<script>
+const inimesteAndmed = [
+    { nimi: "Mari Maasikas", isikukood: "38705123568", vanus: "12",  sünniaeg: "x"},
+    { nimi: "Jaan Jõesaar", isikukood: "49811234567", vanus: "12",  sünniaeg: "x"},
+    { nimi: "Kristiina Kukk", isikukood: "39203029876", vanus: "12",  sünniaeg: "x"},
+    { nimi: "Margus Mustikas", isikukood: "49807010346", vanus: "12",  sünniaeg: "x"},
+    { nimi: "Jaak Järve", isikukood: "39504234985", vanus: "12",  sünniaeg: "x"},
+    { nimi: "Kadi Kask", isikukood: "39811136789", vanus: "12",  sünniaeg: "x"},
+    { nimi: "Kiur Arbeiter", isikukood: "11111", vanus: "12",  sünniaeg: "x"}
+];
 
-    <script>
-    const opilased = [
-        { nimi: "Anna", tulemused: [4.5, 4.8, 4.6] },
-        { nimi: "Mart", tulemused: [5.2, 5.1, 5.4] },
-        { nimi: "Kati", tulemused: [4.9, 5.0, 4.7] },
-        { nimi: "Jaan", tulemused: [4.3, 4.6, 4.4] },
-        { nimi: "Liis", tulemused: [5.0, 5.2, 5.1] },
-        { nimi: "Peeter", tulemused: [5.5, 5.3, 5.4] },
-        { nimi: "Eva", tulemused: [4.8, 4.9, 4.7] },
-        { nimi: "Marten", tulemused: [4.7, 4.6, 4.8] },
-        { nimi: "Kairi", tulemused: [5.1, 5.3, 5.0] },
-        { nimi: "Rasmus", tulemused: [4.4, 4.5, 4.3] },
-    ];
-    function addJump() {
+function addPerson() {
     const nimiInput = document.getElementById("nimiInput").value;
-    const isikukoodInput = document.getElementById("jumpInput").value;
+    const isikukoodInput = document.getElementById("isikukoodInput").value;
+    const vanusInput = document.getElementById("vanusInput").value;
+    const sünniaegInput = document.getElementById("sünniaegInput").value;
 
-    if (nimiInput && jumpInput) {
-            inimesteAndmed.push({ nimi: nimiInput, tulemused: jumpInput});
+    if (nimiInput && isikukoodInput && vanusInput && sünniaegInput) {
+            inimesteAndmed.push({ nimi: nimiInput, isikukood: isikukoodInput, vanus: vanusInput, sünniaeg: sünniaegInput });
             updateList();
     }
 
     document.getElementById("nimiInput").value = "";
-    document.getElementById("jumpInput").value = "";
+    document.getElementById("isikukoodInput").value = "";
+    document.getElementById("vanusInput").value = "";
+    document.getElementById("sünniaegInput").value = "";
 }
 
 function updateList() {
@@ -46,11 +49,12 @@ function updateList() {
 
     inimesteAndmed.forEach(person => {
         const listItem = document.createElement("li");
-        listItem.textContent = `${person.nimi} | ${person.tulemus}`;
+        listItem.textContent = `${person.nimi} | ${person.isikukood} | ${person.vanus} | ${person.sünniaeg}`;
         listContainer.appendChild(listItem);
     });
 }
-    </script>
-    
+
+updateList();
+</script>
 </body>
 </html>
